--- a/exercicios/ex018/tabuada/modelo.html
+++ b/exercicios/ex018/tabuada/modelo.html
@@ -9,14 +9,20 @@
 </head>
 <body>
     <header>
-        <h1>Título</h1>
+        <h1>Tabuda</h1>
     </header>
     <section>
         <div>
-            <p>Testando...</p>
+            <p>
+                <label for="num">Número:</label>
+                <input type="number" name="num" id="num" required>
+                <input type="button" value="Gerar Tabuada" onclick="gera()">
+            </p>
         </div>
-        <div>
-
+        <div id="res">
+            <!-- <textarea name="msg" id="msg" cols="30" rows="10">Digite um número acima</textarea> -->
+            <select name="tabuada" id="tabuada">
+            </select>
         </div>
     </section>
     <footer>
