--- a/exercicios/ex018/contador/index.html
+++ b/exercicios/ex018/contador/index.html
@@ -5,27 +5,27 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="estilos/style.css">
-    <title>Modelo de Exercício</title>
+    <title>Super Contador</title>
 </head>
 <body>
     <header>
         <h1>Vamos contar</h1>
     </header>
     <section>
-        <div>
+        <div id="dados">
             <p>
                 <label for="numIni">Início:</label>
-                <input type="number" name="numIni" id="numIni" placeholder="Digite o número inícial" required>
+                <input type="number" name="inicio" id="txti" required>
             </p>
             <p>
                 <label for="numFim">Fim:</label>
-                <input type="number" name="numFim" id="numFim" placeholder="Digite o número final" required>
+                <input type="number" name="fim" id="txtf" required>
             </p>
             <p>
                 <label for="passo">Passo:</label>
-                <input type="number" name="passo" id="passo" placeholder="De quanto vai ser o salto?" required>
+                <input type="number" name="passo" id="txtp" required>
             </p>
-            <input type="button" value="Contar" onclick="verificar()">
+            <input type="button" value="Contar" onclick="contar()">
         </div>
         <div id="res">
             <p>Preparando a contagem...</p>
