--- a/exercicios/ex021/analisador/index.html
+++ b/exercicios/ex021/analisador/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="estilos/style.css">
-    <title>Modelo de Exercício</title>
+    <title>Analisador de Números</title>
 </head>
 <body>
     <header>
